[CSL-2170] Remove MonadFail, part 2

--- a/crypto/cardano-sl-crypto.cabal
+++ b/crypto/cardano-sl-crypto.cabal
@@ -67,6 +67,7 @@ library
                      , pvss
                      , quickcheck-instances
                      , reflection
+                     , safe-exceptions
                      , scrypt
                      , serokell-util
                      , stm
